tests/cases/exhaustiveness/non-exhaustive-decl.hash
// run=fail

get_name := () -> str => {
    "a name"
}

main := () => {
    a := get_name()
    "str" := a
}
